# brain-researcher-agent-kit

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MCP_SETUP.md  README.md  REDACTION_POLICY.md  RELEASE_NOTES.md  SECURITY.md  SKILL_LICENSES.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: agent-behavior.yml  bug.yml  config.yml  contract-drift.yml  kg-result-correction.yml  proposal.yml  skill-consolidation.yml
.github/workflows/: ci.yml
adapters/: br-adapter-map.json  br-fallback-policy.md  neurodesk-modules.json  neurodesk.md
agents/: AGENTS.br.example.md  AGENTS.brain-researcher.md  AGENTS.code-review.md  AGENTS.research.md
docs/: how-to-write-skill.md  migration.md
evals/: checks.py  runner.py
evals/rubrics/: research-provenance.yaml  research-rejection.yaml  research-reliability.yaml  research-validity.yaml
examples/cross-tool-handoff/: README.md  rubric.yaml  run.sh
examples/literature-grounding/: README.md  rubric.yaml  run.sh
examples/neuroclaim-evidence-gate/: README.md  rubric.yaml  run.sh
examples/null-result-self-critique/: README.md  rubric.yaml  run.sh
examples/plan-validate-and-execute/: README.md  rubric.yaml  run.sh
examples/report-gate-rejection/: README.md  rubric.yaml  run.sh
plugins/brain-researcher/: .mcp.json  README.md
scripts/: redaction_guard.py
skills/auditable-episode/: SKILL.md
skills/banghcp-gcp-batch-orchestration/: SKILL.md
skills/br-rollout/: SKILL.md
skills/br-vs-host-benchmark/: SKILL.md
skills/brain-researcher-docs-public-prune/: SKILL.md
(+193 files in other folders)
